<resources>
    <string name="app_name">TxTLauncher</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="applist_button_desc">Installed applications</string>
    <string name="quit_button_desc">Quit</string>
    <string name="started">Started app</string>
    <string name="dark_mode">dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="service_disable">No device administrator privilege</string>
    <string name="button_dial">Dial app</string>
    <string name="button_mail">Mail app</string>
    <string name="button_browser">Browser app</string>
    <string name="button_camera">Camera app</string>
    <string name="button_search">Search app</string>
    <string name="setting_addapp">Add app to home screen</string>
    <string name="setting_sysicon">Home screen use sys app icon</string>
    <string name="setting_starticon">Home screen use apps icon</string>
    <string name="settings_title">Settings</string>
    <string name="started_activity">Started activity</string>
    <string name="stopped_activty">Stopped activity</string>
    <string name="starting_other_app">Starting other app</string>
    <string name="favorite_apps">Faviorites</string>
    <string name="note_title">Note</string>
    <string name="settings_addfavapp">Add favorites app</string>
    <string name="title_home_addapp">Select app to home</string>
    <string name="title_favorite_addapp">Select app to favorites</string>
    <string name="title_widget">Tools</string>
    <string name="search">Search</string>
    <string name="new_install">First time run: initializing</string>
    <string name="update_install">Updated version: initializing</string>
    <string name="settings_title_privateai">Private AI set URL</string>
    <string name="settings_title_searchurl">Web search URL</string>
    <string name="settings_title_background_image">Background image name (in download folder)</string>
    <string name="button_reset">Reset</string>
    <string name="settings_read_applist">Re-read app list (after install, delete apps)</string>
    <string name="settings_sysbackground">Set system background image</string>
    <string name="error_bitmap">Error with image manipulation</string>
    <string name="background_file_not_found">Not found background image file</string>
    <string name="button_close_widget">Close</string>
    <string name="start_ai">Start AI</string>
    <string name="settings_weather_html1">Weather HTML (@CITY@ - where the city should be inserted)</string>
    <string name="version">Version</string>
    <string name="widgat_map">Go to map</string>
    <string name="error_startapp">App launch faled</string>
    <string name="news_update_title">The app is updated</string>
    <string name="news_update">New functions: # - error repair # - new function</string>
    <string name="button_next">Next</string>
    <string name="help_title">Help</string>
    <string name="news_firstrun_title">First start</string>
    <string name="news_firstrun">Initializing...</string>
    <string name="help_text_1">Usage: ## Swipe right: Tools # Swipe left: discovery # Sipe up: all app # Swipe down: favorites # Double click: lock # Long press: app settings</string>
    <string name="help_text_2">Settings: ## - select home screen apps # - select favorites # - add icons to apps # - private AI link (tools page) # - web search link (search field add to end of link # - background image (in download folder) # - weather web link (copy city name to @CITY@) # - reset settings to default # - read app list when changed apps</string>
    <string name="help_text_3">New version download from web page.</string>
    <string name="help_text_4">Licence: GPLv3</string>
    <string name="licence">GPLv3</string>
    <string name="button_help">Help</string>
    <string name="button_settings">Settings</string>

</resources>