<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/settingsQuitFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="closeSettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/settingsViewTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:onClick="closeSettingsButton"
            android:text="@string/settings_title"
            android:textAlignment="gravity"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/settingsScrollFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@id/settingsLayout"
        app:layout_constraintTop_toBottomOf="@id/settingsQuitFrame"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:id="@+id/settingsFrame"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/addAppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:onClick="openAddAppList"
                android:text="@string/setting_addapp"
                android:textAlignment="gravity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/addFavAppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:onClick="openAddFavAppList"
                android:text="@string/settings_addfavapp"
                android:textAlignment="gravity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addAppButton" />

            <Switch
                android:id="@+id/sysIconCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:checkable="true"
                android:text="@string/setting_sysicon"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addFavAppButton"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/appIconCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:checkable="true"
                android:gravity="start"
                android:text="@string/setting_starticon"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sysIconCheck"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <View
                android:id="@+id/settingsDivider0"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/appIconCheck" />

            <TextView
                android:id="@+id/urlPrivateAI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/settings_title_privateai"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingsDivider0" />

            <EditText
                android:id="@+id/editPrivateAI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/settings_title_privateai"
                android:inputType="textUri"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/urlPrivateAI" />

            <TextView
                android:id="@+id/urlSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/settings_title_searchurl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPrivateAI" />

            <EditText
                android:id="@+id/editUrlSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/settings_title_searchurl"
                android:inputType="textUri"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/urlSearch" />

            <TextView
                android:id="@+id/backgroundImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/settings_title_background_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editUrlSearch" />

            <EditText
                android:id="@+id/editBackgroundImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/settings_title_background_image"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backgroundImage" />

            <TextView
                android:id="@+id/weatherHtml1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/settings_weather_html1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editBackgroundImage" />

            <EditText
                android:id="@+id/editWeatherHtml1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/settings_weather_html1"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherHtml1" />

            <TextView
                android:id="@+id/weatherHtml2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/settings_weather_html2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editWeatherHtml1" />

            <EditText
                android:id="@+id/editWeatherHtml2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/settings_weather_html2"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherHtml2" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:gravity="center|center_horizontal"
                android:onClick="resetButton"
                android:text="@string/button_reset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backgroundImage" />

            <View
                android:id="@+id/settingsDivider1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/buttonReset" />

            <Button
                android:id="@+id/buttonReadAppList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:gravity="center|center_horizontal"
                android:onClick="rereadAppListButton"
                android:text="@string/settings_read_applist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingsDivider1" />

            <View
                android:id="@+id/settingsDivider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/buttonReadAppList" />

            <View
            android:id="@+id/settingsDividerX"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/settingsDivider2" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>